@@ -503,8 +503,14 @@ platforms.
     </tr>
     <tr>
       <td valign="top">name</td>
-      <td valign="top">The name pattern to test</td>
-      <td align="center" valign="top">Yes</td>
+      <td valign="top">The name pattern to test using standard Ant
+        patterns.</td>
+      <td valign="top" align="center" rowspan="2">Exactly one of
+        the two</td>
+    </tr>
+    <tr>
+      <td valign="top">regex</td>
+      <td valign="top">The regular expression matching files to select.</td>
     </tr>
     <tr>
       <td valign="top">casesensitive</td>
