@@ -435,7 +435,12 @@
         <td valign="top">The name of files to select. The name parameter
           can contain the standard Ant wildcard characters.
         </td>
-        <td valign="top" align="center">Yes</td>
+        <td valign="top" align="center" rowspan="2">Exactly one of
+          the two</td>
+      </tr>
+      <tr>
+        <td valign="top">regex</td>
+        <td valign="top">The regular expression matching files to select.</td>
       </tr>
       <tr>
         <td valign="top">casesensitive</td>
